--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <img src="./img/menu-burger.svg" alt="menu-burger">
     <span>MENU</span>
   </header>
-  <main></main> 
+  <main>
+    <img src="./img/background-image.png" alt="Logo da COCA-COLA" class="background-logo">
+        <h2 class="content-text">
+            Things go better with  
+        </h2>
+      
+
+        <img src="./img/coca-cola.png" alt="garrafa coca-cola">
+  </main> 
+    
   <footer></footer> 
 </body>
 </html>
