--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <img src="./img/coca-cola.png" alt="garrafa coca-cola">
   </main> 
     
-  <footer></footer> 
+  <footer>
+    <img src="./img/map.svg" alt="mapa">
+    
+  </footer> 
 </body>
 </html>
